maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: not found: value getMondehauteur
    for(y<-0 to getMondehauteur()-1)
                ^JediEscaper:39: error: not found: value getMondehauteur
    for(y<-0 to getMondehauteur()-1)
                ^